# cadabby

./: README.md
discharger/: CMakeLists.txt
discharger/data/: font_2.fnt
discharger/data/sprites/: Ship.json
discharger/src/: ResourceManager.cpp  ResourceManager.h  Settings.cpp  Settings.h  main.cpp  version.h
discharger/src/Base/: Delegate.h  Iterators.h  Singleton.h
discharger/src/Event/: Dispatcher.cpp  Dispatcher.h  Event.cpp  Event.h  EventTarget.cpp  EventTarget.h  Gamepad.cpp  Gamepad.h  Handler.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  State.cpp  State.h
discharger/src/Game/: Game.cpp  Game.h
discharger/src/Graphics/: Font.cpp  Font.h  Point.cpp  Point.h  Rect.cpp  Rect.h  Renderer.cpp  Renderer.h  Size.cpp  Size.h  Sprite.cpp  Sprite.h  Sprites.cpp  Sprites.h  Surface.cpp  Surface.h  Tileset.cpp  Tileset.h  types.h
discharger/src/Sound/: Ogg.cpp  Ogg.h  SoundManager.cpp  SoundManager.h
discharger/src/State/: Exit.cpp  Exit.h  FadeIn.cpp  FadeIn.h  FadeOut.cpp  FadeOut.h  Start.cpp  Start.h  State.cpp  State.h
discharger/src/Utils/: Logger.cpp  Logger.h
discharger/src/Utils/Ini/: File.cpp  File.h  Parser.cpp  Parser.h  Section.cpp  Section.h  Value.cpp  Value.h  Writer.cpp  Writer.h
discharger/src/common/: basics.h
dumpers/i2c_python/: dumpfw.py
dumpers/kernel_plugin/: CMakeLists.txt  fgfwdumper.c  fgfwdumper.yml
dumps/: README.md  slim.fg.fw.full  syscon12-00.pkg.seg02  syscon12-01.pkg.seg02  syscon13-00.pkg.seg02  syscon13-01.pkg.seg02
editor/: CMakeLists.txt  main.c
flasher/: CMakeLists.txt  fgfwflasher.c  fgfwflasher.yml  pcemu.h
structs/: dataflash.h  offsets
unsealer/: CMakeLists.txt  fgunseal.c  fgunseal.yml
